Regression: Boolean Modifier Overlap Threshold property issue in UI when value is 0 #107011

Closed
opened 2023-04-16 19:22:04 +02:00 by Y.T-LAW · 2 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41

Blender Version
Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: 1be25cfff18b
Worked: 2.93

Caused by e95f71bf15

Short description of error
Overlap threshold value doesn't change further when its 0.

Exact steps for others to reproduce the error

  1. Start up Blender with factory settings.
  2. Add a Boolean modifier to Cube.
  3. Set Solver to "Fast" and set the Overlap Threshold to 0.
  4. Drag the value or click the right corner of the value Box.

image

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 with Max-Q Design/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.41 **Blender Version** Broken: version: 3.5.0, branch: blender-v3.5-release, commit date: 2023-03-29 02:56, hash: `1be25cfff18b` Worked: 2.93 Caused by e95f71bf15 **Short description of error** Overlap threshold value doesn't change further when its 0. **Exact steps for others to reproduce the error** 1. Start up Blender with factory settings. 2. Add a Boolean modifier to Cube. 3. Set Solver to "Fast" and set the Overlap Threshold to 0. 4. Drag the value or click the right corner of the value Box. ![image](/attachments/2771dde3-c5db-402d-a6a4-5e9400ee75f0)
Y.T-LAW added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-16 19:22:05 +02:00
Member

Hi, thanks for the report. I can confirm. Will check.
This is a regression introduced between 2.93 - 3.0

Hi, thanks for the report. I can confirm. Will check. This is a regression introduced between 2.93 - 3.0
Pratik Borhade added
Module
Modeling
Status
Confirmed
Interest
User Interface
and removed
Status
Needs Triage
labels 2023-04-17 07:39:10 +02:00
Member

Caused by e95f71bf15
cc @HDMaster84

Caused by e95f71bf152ad227383c3512f848cd924512a68b cc @HDMaster84
Pratik Borhade changed title from Boolean Modifier Overlap Threshold property issue in UI to Boolean Modifier Overlap Threshold property issue in UI when value is 0 2023-04-17 07:51:39 +02:00
Pratik Borhade changed title from Boolean Modifier Overlap Threshold property issue in UI when value is 0 to Regression: Boolean Modifier Overlap Threshold property issue in UI when value is 0 2023-04-17 07:51:50 +02:00
Pratik Borhade self-assigned this 2023-04-28 19:55:30 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-29 02:07:59 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107011
No description provided.